source organization changes, redirect script added, additional fixes and additions

--- a/styles/main.css
+++ b/styles/main.css
@@ -182,6 +182,14 @@ p {
   padding-right: 5px;
 }
 
+#melist {
+  list-style-type: none;
+}
+
+#sublist {
+  list-style-type: square;
+}
+
 #projs {
   position: absolute;
   background-color: white;
