--- a/styles/main.css
+++ b/styles/main.css
@@ -48,8 +48,14 @@ h3 {
   background-color: black;
 }
 
-.fa-stackoverflow:hover {
-  background-color: black;
+#soicon {
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#soicon:hover {
+  color: black;
 }
 
 #upicon {
