--- a/styles/main.css
+++ b/styles/main.css
@@ -139,6 +139,12 @@ p {
   float: right;
 }
 
+.github {
+  position: absolute;
+  top: 295px;
+  right: 0;
+}
+
 #mainphilo {
   padding-top: 15px;
 }
@@ -186,7 +192,7 @@ p {
 .mediv {
   position: absolute;
   width: 550px;
-  left: 32.5%;
+  left: 32%;
   top: 225px;
   background-color: white;
 }
