--- a/styles/main.css
+++ b/styles/main.css
@@ -261,3 +261,14 @@ div article ul li {
   background-color: orange;
   color: white;
 }
+
+.column-left { 
+  float: left;
+  width: 33%;
+}
+
+.column-right {
+  float: right;
+  width: 33%;
+}
+.column-center{ display: inline-block; width: 33%; }
