start to new cv design

--- a/styles/main.css
+++ b/styles/main.css
@@ -264,11 +264,16 @@ div article ul li {
 
 .column-left { 
   float: left;
-  width: 33%;
+  padding-left: 15px;
+  width: 22.5%;
 }
 
 .column-right {
   float: right;
   width: 33%;
 }
-.column-center{ display: inline-block; width: 33%; }
+
+.column-center {
+  display: inline-block;
+  width: 33%;
+}
