put warning on cv page

--- a/styles/main.css
+++ b/styles/main.css
@@ -261,7 +261,7 @@ div article ul li {
   background-color: orange;
   color: white;
 }
-
+/*
 .column-left { 
   float: left;
   padding-left: 15px;
@@ -277,3 +277,4 @@ div article ul li {
   display: inline-block;
   width: 33%;
 }
+*/
