--- a/styles/main.css
+++ b/styles/main.css
@@ -199,10 +199,7 @@ p {
 }
 
 #spec {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 5px;
 }
 
 #melist {
@@ -248,7 +245,7 @@ div article ul li {
 }
 
 .nav li {
-  width: 28.5%%;
+  width: 28.5%;
 }
 
 .nav li:hover {
