--- a/styles/main.css
+++ b/styles/main.css
@@ -274,6 +274,10 @@ ul.nav li {
   padding-right: 10px;
   padding-bottom: 10px;
 }
+
+div.card-header {
+    text-align: center;
+}
 /*
 li.melist, ul.sublist {
     list-style-type: circle;
@@ -402,5 +406,22 @@ li.melist, ul.sublist {
 @media (max-width: 880px) {
     nav.nav.navbar {
         display: none;
+    }
+}
+
+/* creativity page */
+@media (max-width: 875px) {
+    div#creative-works {
+        left: 5%;
+        right: 5%;
+        width: 90%;
+    }
+}
+
+@media (min-width: 876px) {
+    div#creative-works {
+        left: 12.5%;
+        right: 12.5%;
+        width: 75%;
     }
 }
