--- a/styles/main.css
+++ b/styles/main.css
@@ -357,8 +357,9 @@ li.melist, ul.sublist {
 @media (min-width: 1276px) {
     div.twitter {
         position: absolute;
-        top: 67.5% !important;
+        top: 50% !important;
         right: 0 !important;
+        height: 55% !important;
     }
 }
 
