--- a/styles/main.css
+++ b/styles/main.css
@@ -136,12 +136,12 @@ p {
   font-family: "Harmattan";
 }
 
-nav.navbar {
+.navbar {
   top: -37.5px;
   width: 100%;
 }
 
-nav.navbar-brand {
+.navbar-brand {
   background-color: orange;
   color: white;
   width: 12.5%;
@@ -150,7 +150,7 @@ nav.navbar-brand {
   font-family: "Harmattan";
 }
 
-nav.navbar-brand:hover {
+.navbar-brand:hover {
   background-color: white;
   color: cyan;
 }
