--- a/styles/main.css
+++ b/styles/main.css
@@ -136,12 +136,12 @@ p {
   font-family: "Harmattan";
 }
 
-.navbar {
+nav.philo-nav {
   top: -37.5px;
   width: 100%;
 }
 
-.navbar-brand {
+nav.philo-nav li a.navbar-brand {
   background-color: orange;
   color: white;
   width: 12.5%;
@@ -150,9 +150,9 @@ p {
   font-family: "Harmattan";
 }
 
-.navbar-brand:hover {
-  background-color: white;
-  color: cyan;
+nav.philo-nav li a.navbar-brand:hover {
+  background-color: cyan;
+  color: black;
 }
 
 .info {
@@ -255,7 +255,7 @@ div.card-header {
     background-color: #337ab7 !important;
 }
 
-.nav {
+.nav-tabs {
   float: right;
 }
 
