--- a/styles/main.css
+++ b/styles/main.css
@@ -6,11 +6,18 @@
 }
 
 header {
-  color: #42B1D6;
-  text-shadow: 1px 1px 0 rgb(255, 0, 0);
-  font-size: 32px;
+  color: #3D8FC5;
+  text-shadow: 1px 1px 0 #FF7444;
   background-color: #F58711;
   font-family: "Monserrat";
+}
+
+.jumbotron {
+    padding: 3.25em 2.75em !important;
+}
+
+.jumbotron h1 {
+    font-size: 60px;
 }
 
 h3 {
@@ -22,36 +29,33 @@ h3 {
   float: left;
 }
 
+.dropdown-toggle::after {
+  display: none !important;  /* remove down arrow from dropdown menu */
+}
+
+.dropdown-item {
+  font-family: "Harmattan" !important;
+  font-size: 1.25em;
+}
+
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('../assets/fonts/glyphicons-halflings-regular.eot');
   src: url('../assets/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
-.btn-home {
-  background-color: #FFA3C8;
+.btn-primary.btn-default {
+  background-color: #FF7444 !important;
+  border-color: #FF7444 !important;
 }
 
-.btn-upwork {
-  background-color: #8CE070;
+.btn-primary.btn-default:hover {
+  background-color: #FFBA64 !important;
+  border-color: #FFBA64 !important; 
 }
 
-.btn-refind {
-  background-color: #F1FFFF;
-}
-
-.btn-refind:hover, .btn-stackoverflow:hover, #upicon:hover {
+.btn-refind:hover, .btn-stackoverflow:hover {
   background-color: black;
-}
-
-.btn-stackoverflow {
-  background-color: #FFE8DF;
-}
-
-#upicon {
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
 }
 
 .btn-social-icon {
@@ -60,15 +64,124 @@ h3 {
 }
 
 .btn-social-icon:hover {
-  color: #61F2A5;
+  background-color: #FFBA64 !important;
+  border-color: #FFBA64 !important;
 }
+
+/* SOCIAL ICON COLORS */
+.btn-home {
+  background-color: #FFA3C8 !important;
+  color: white !important;
+}
+.btn-home:hover {
+  background-color: white !important;
+  color: #FFA3C8 !important;
+  border-color: white !important;
+}
+
+.btn-facebook {
+  background-color: #3b5998 !important;
+  color: white !important;
+}
+.btn-facebook:hover {
+  background-color: white !important;
+  color: #3b5998 !important;
+  border-color: white !important;
+}
+
+.btn-twitter {
+  background-color: #55ACEE !important;
+  color: white !important;
+}
+.btn-twitter:hover {
+  background-color: white !important;
+  color: #55ACEE !important;
+  border-color: white !important;
+}
+
+.btn-github {
+  background-color: #444 !important;
+  color: white !important;
+}
+.btn-github:hover {
+  background-color: white !important;
+  color: #444 !important;
+  border-color: white !important;
+}
+
+.btn-linkedin {
+  background-color: #007bb6 !important;
+  color: white !important;
+}
+.btn-linkedin:hover {
+  background-color: white !important;
+  color: #007bb6 !important;
+  border-color: white !important;
+}
+
+.btn-stackoverflow {
+  background-color: #F48024 !important;
+  color: white !important;
+}
+.btn-stackoverflow:hover {
+  background-color: white !important;
+  color: #F48024 !important;
+  border-color: white !important;
+}
+
+.btn-refind {
+  background-color: white !important;
+}
+.btn-refind:hover {
+  background-color: black !important;
+  border-color: black !important;
+}
+
+.btn-pinterest {
+  background-color: #cb2027 !important;
+  color: white !important;
+}
+.btn-pinterest:hover {
+  background-color: white !important;
+  color: #cb2027 !important;
+  border-color: white !important;
+}
+
+.btn-instagram {
+  background-color: #3f729b !important;
+  color: white !important;
+}
+.btn-instagram:hover {
+  background-color: white !important;
+  color: #3f729b !important;
+  border-color: white !important;
+}
+
+.btn-vsco {
+  background-color: white !important;
+}
+.btn-vsco:hover {
+  background-color: darkslategray !important;
+  border-color: darkslategray !important;
+}
+
+.btn-google {
+  background-color: #dd4b39 !important;
+  color: white !important;
+}
+.btn-google:hover {
+  background-color: white !important;
+  color: #dd4b39 !important;;
+  border-color: white !important;
+}
+/* END SOCIAL ICON COLORS */
 
 .white {
   color: white;
 }
 
 #intro {
-  padding-top: 20px;
+  padding-top: 12.5px;
 }
 
 p {
@@ -77,16 +190,16 @@ p {
 }
 
 #social {
-  padding-top: 17.5px;
+  padding-top: 8.5px;
 }
 
 #conbutton {
-  padding-top: 15px;
+  padding-top: 12.5px;
   font-family: "Harmattan";
 }
 
 #morelink {
-  padding-top: 12.5px;
+  padding-top: 10px;
   font-family: "Harmattan";
 }
 
@@ -96,7 +209,7 @@ p {
 }
 
 #affil {
-  padding-top: 17.5px;
+  padding-top: 15px;
 }
 
 .un {
@@ -119,7 +232,7 @@ p {
 
 .github {
   position: absolute;
-  top: 292.5px;
+  top: 258.25px;
   right: 0;
 }
 
@@ -136,12 +249,12 @@ p {
   font-family: "Harmattan";
 }
 
-nav.philo-nav {
+.philo-nav {
   top: -37.5px;
   width: 100%;
 }
 
-nav.philo-nav li a.navbar-brand {
+.philo-nav li {
   background-color: orange;
   color: white;
   width: 12.5%;
@@ -150,9 +263,17 @@ nav.philo-nav li a.navbar-brand {
   font-family: "Harmattan";
 }
 
-nav.philo-nav li a.navbar-brand:hover {
+.philo-nav li:hover {
   background-color: cyan;
   color: black;
+}
+
+.philo-nav li a {
+    color: white !important;
+}
+
+.philo-nav li a:hover {
+    color: #007bff !important;
 }
 
 .info {
@@ -253,13 +374,18 @@ div.card-header {
 
 .active {
     background-color: #337ab7 !important;
+    color: white !important;
+}
+.active:hover {
+    background-color: white !important;
+    color: #337ab7 !important;
 }
 
 .nav-tabs {
   float: right;
 }
 
-.nav-pills li a:hover, ul.nav-tabs li a:hover, ul.nav.active li a:hover {
+.nav-pills li a:hover, ul.nav li a:hover, ul.nav-tabs li a:hover, ul.nav.active li a:hover {
   background-color: orange !important;
   color: white;
 }
